# zine

./: .gitignore  frontmatter.ziggy-schema  guide.md
src/: AnsiRenderer.zig  Build.zig  Taxonomy.zig  Variant.zig  context.zig  root.zig  worker.zig
src/cli/: serve.zig
src/context/: Page.zig  Site.zig  Taxonomy.zig  TaxonomyConfig.zig  TaxonomyTerm.zig  Template.zig
tests/rendering/category/: snapshot.txt  zine.ziggy
tests/rendering/category/content/: index.smd
tests/rendering/category/content/blog/: quote.smd
tests/rendering/category/content/posts/: first.smd  second.smd
tests/rendering/category/layouts/: base.shtml  taxonomy_list.html  taxonomy_single.html
tests/rendering/category/snapshot/: index.html
tests/rendering/taxonomies/: zine.ziggy
tests/rendering/taxonomies/content/: index.smd  post1.smd  post2.smd
tests/rendering/taxonomies/layouts/: index.shtml  page.shtml  taxonomy_list.shtml  taxonomy_single.shtml
tests/rendering/taxonomies/snapshot/: index.html
tests/rendering/taxonomies/zig-global-cache/p/tree_sitter-0.22.4-150-g7e3f5726-z0LhyN88UicDHlr22vQnOZ3DW9NWN1gOhDwLuCRXvrh2/tree-sitter-mail/: .editorconfig  go.mod  justfile  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
tests/rendering/taxonomies/zig-global-cache/p/tree_sitter-0.22.4-150-g7e3f5726-z0LhyN88UicDHlr22vQnOZ3DW9NWN1gOhDwLuCRXvrh2/tree-sitter-mail/plugin/: init.lua
tests/rendering/taxonomies/zig-global-cache/p/tree_sitter-0.22.4-150-g7e3f5726-z0LhyN88UicDHlr22vQnOZ3DW9NWN1gOhDwLuCRXvrh2/tree-sitter-mail/src/: parser.c
(+45 files in other folders)
